[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/font/menu_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://src/FliesCount.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Instructions.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="FliesCount" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 129.0
margin_top = 99.0
margin_right = 350.0
margin_bottom = 170.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 221.0
margin_bottom = 21.0
focus_neighbour_bottom = NodePath("../ToggleMusicButton")
focus_next = NodePath("../ToggleMusicButton")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continuar"
flat = true

[node name="ToggleMusicButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 221.0
margin_bottom = 46.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ResumeButton")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "musica: ligada"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 221.0
margin_bottom = 71.0
focus_neighbour_top = NodePath("../ToggleMusicButton")
focus_previous = NodePath("../ToggleMusicButton")
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sair"
flat = true

[node name="Instructions" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ToggleMusicButton" to="." method="_on_ToggleMusicButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
